fix: dark mode colors

--- a/src/components/events/events.module.css
+++ b/src/components/events/events.module.css
@@ -6,7 +6,7 @@
 	
     padding: 3px 20px;
     margin-bottom: 25px;
-	background-color: #F2F6FB;
+	background-color: #242424;
 }
 
 .event_card{
