--- a/src/components/team/team.module.css
+++ b/src/components/team/team.module.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-
+	background-color:#F2F6Fb;
     padding: 2px 75px;
     margin-bottom: 25px;
 }
@@ -20,7 +20,7 @@
     /* height: 150px; */
     width: 250px;
     height: 250px;
-    background-color: #F2F6FB;
+    background-color: #242424;
     border-radius: 25px;
 
     
